--- a/accueil.html
+++ b/accueil.html
@@ -19,6 +19,10 @@
 
 </head>
 <body>
+    <div class="loader">
+    
+    </div>
+
     <header>
         <img id="logo" src="images/ohmyfood.png" alt="logo">
     </header>
