--- a/accueil.html
+++ b/accueil.html
@@ -78,15 +78,15 @@
                 <h1 class="title-cards">Restaurants</h1>
                 <div class="cards">
                     <div class="card">
-                        <a href="La-palette-du-gout.html">
-                            <div class="superpostion">
+                    <a href="La-palette-du-gout.html">
+                        <div class="superpostion">
                                 <img class="img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="images">
                                 <p class="text-over">Nouveau</p> 
                             </div>
                             <h2 class="title-card">La palette du goût</h2>
                             <div class="text-heart">
                                 <p class="name">Ménilmontant</p>
-                        </a>
+                    </a>
                                 <div class="heart">
                                     <i class="fa-regular fa-heart empty"></i>
                                     <i class="fa-solid fa-heart full"></i>
@@ -144,20 +144,23 @@
     </main>
     <footer>
         <h1 class="title-logo">ohmyfood</h1>
-        <ul class="footer-items">
+        <div class="footer-items">
             <div class="list">
                 <i class="fa-solid fa-utensils icon-foot"></i>
-                 <li>Proposer un restaurant</li>
+                 <p>Proposer un restaurant</p>
                 </div>
             <div class="list">
                 <i class="fa-solid fa-handshake-angle icon-foot"></i>
-                 <li>Devenez partenaire</li>
+                 <p>Devenez partenaire</p>
             </div>
-            <div><li class="list"> Mention légales</li></div>
+            <div>
+                <p> Mention légales</p></div>
             <div><a class="contact
-                " href="mailto:contact@omyfood.com"><li>Contact</li></a>
+                " href="mailto:contact@omyfood.com">
+                <p>Contact</p>
+            </a>
             </div>
-        </ul>
+        </div>
     </footer>
     
     
