--- a/accueil.html
+++ b/accueil.html
@@ -83,7 +83,7 @@
                                 <img class="img" src="images/jay-wennington-N_Y88TWmGwA-unsplash.jpg" alt="images">
                                 <p class="text-over">Nouveau</p> 
                             </div>
-                            <a href="La-palette-du-gout.html">
+                            <a href="la-palette-du-gout.html">
                             <h2 class="title-card">La palette du goût</h2>
                             </a>
                             <div class="text-heart">
@@ -102,7 +102,7 @@
                                 <img class="img" src="images/stil-u2Lp8tXIcjw-unsplash.jpg" alt="images">
                                 <p class="text-over">Nouveau</p>
                             </div>
-                            <a href="La-note-enchantée.html">
+                            <a href="la-note-enchantee.html">
                             <h2 class="title-card">La note enchantée</h2>
                             </a>
                             <div class="text-heart">
@@ -118,7 +118,7 @@
                     <div class="card">
                         
                             <img class="img" src="images/toa-heftiba-DQKerTsQwi0-unsplash.jpg" alt="images">
-                            <a href="A-la-francaise.html">
+                            <a href="a-la-francaise.html">
                             <h2 class="title-card">À la française</h2>
                             </a>
                             <div class="text-heart">
@@ -135,7 +135,7 @@
                     <div class="card">
                         
                             <img class="img" src="images/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="images">
-                        <a href="Le-delice-des-sens.html">
+                        <a href="le-delice-des-sens.html">
                             <h2 class="title-card" >Le délice des sens</h2>
                         </a>
                             <div class="text-heart">
