renommer l'acceuil en index html

--- a/La-palette-du-gout.html
+++ b/La-palette-du-gout.html
@@ -18,7 +18,7 @@
 </head>
 <body>
     <header>
-        <a class="arrow" href="accueil.html">
+        <a class="arrow" href="index.html">
             <i class="fa-solid fa-arrow-left "></i>
         </a>
         <h1 class="title-principal">Ohmyfood</h1>
