--- a/la-note-enchantee.html
+++ b/la-note-enchantee.html
@@ -17,7 +17,7 @@
 </head>
 <body>
     <header>
-        <a class="arrow" href="accueil.html">
+        <a class="arrow" href="index.html">
             <i class="fa-solid fa-arrow-left "></i>
         </a>
         <h1 class="title-principal">Ohmyfood</h1>
