changer la position du titre

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     </div>
 
     <header>
-        <img id="logo" src="images/ohmyfood.png" alt="logo">
+        <h1 class="title-principal-accueil">Ohmyfood</h1>
     </header>
     <main>
         <div class="search">
