--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <h2 class="title-presentation">
                 Réservez le menu qui vous convient
             </h2>
-            <p>Découvrez des restaurants d'exeption,sélectionnés par nos soins</p>
+            <p class="description">Découvrez des restaurants d'exeption,sélectionnés par nos soins</p>
             <button>Explorez nos restaurants</button>
             
             <div class="gradient"></div>
